[package]
name = "nlp"
version = "0.1.0"
authors = ["Manuel Berrocal <mbercas@gmail.com>"]
edition = "2018"
description = "Natural Language Processing routines"    
license = "MIT"
include = [
     "src/*",
     "Cargo.toml"]  

[[bin]]
name = "nlp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
